--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -61,7 +61,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                 evtInstance = [
                         SELECT Instance_Title__c, Event__r.Event_Name__c,
                                 Instance_Time_Zone__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Start_Date__c,
-                                Instance_End_Date__c, Current_Available_Capacity__c, Active_Status__c
+                                Instance_End_Date__c, Current_Available_Capacity__c, Active_Status__c, Registration_Close_Date__c, Registration_Close_Time__c
                         FROM Summit_Events_Instance__c
                         WHERE Id = :eventInformation.instanceId
                         WITH SECURITY_ENFORCED
