--- a/force-app/test/default/classes/SummitEventsAdditionalQuestions_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsAdditionalQuestions_TEST.cls
@@ -99,7 +99,7 @@ private class SummitEventsAdditionalQuestions_TEST {
 
             System.assertEquals(JSON.serialize(questionController.eventInformation), '{"registrationId":"' + seaTestRegistration.Id + '","instanceId":"' + seaTestInstances[1].Id + '","eventId":"' + seaTestInstances[1].Event__c + '","dt":"' + String.valueOf(nowTime) + '","audience":"Transfer"}');
             //All questions types represented here (if number of types increases this will have to be adjusted)
-            System.assertEquals(questionController.additionalQuestions.size(), 8);
+            System.assertEquals(questionController.additionalQuestions.size(), 9);
 
             Test.stopTest();
         }
@@ -173,7 +173,6 @@ private class SummitEventsAdditionalQuestions_TEST {
         //Test question with empty map_to_field defined.
         List<Summit_Events_Question__c> testQuestions = SummitEventsTestSharedDataFactory.addQuestionsToEvent(seaTestInstances[1].Event__c, 'Text Area', 'Registrant and Guest');
         List<Summit_Events_Question__c> testQuestions2 = SummitEventsTestSharedDataFactory.addQuestionsToEvent(seaTestInstances[1].Event__c, 'Text Area', 'Registrant and Guest');
-        testQuestions[0].Map_to_Field__c = '';
         update testQuestions;
 
         System.runAs(testUser) {
@@ -192,8 +191,6 @@ private class SummitEventsAdditionalQuestions_TEST {
             SEShared.createEncryptedCookieWithNow('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, nowTime);
 
             SummitEventsAdditionalQuestionsCtlr questionController = new SummitEventsAdditionalQuestionsCtlr();
-            System.assertEquals(questionController.questionWrapper[0].setupError, 'Question setup issue(s): Map to field is not entered. ');
-
             //Test question with field that doesn't exist for map_to_field__c
             testQuestions[0].Map_to_Field__c = 'BogusField';
             testQuestions[0].Lookup_Secondary_Input_Link_Text__c = 'Secondary Link Text';
@@ -225,7 +222,6 @@ private class SummitEventsAdditionalQuestions_TEST {
         //Test question with empty map_to_field defined.
         List<Summit_Events_Question__c> testQuestions = SummitEventsTestSharedDataFactory.addQuestionsToEvent(seaTestInstances[1].Event__c, 'lookup', 'Registrant and Guest');
         //List<Summit_Events_Question__c> testQuestions2 = SummitEventsTestSharedDataFactory.addQuestionsToEvent(seaTestInstances[1].Event__c, 'lookup', 'Registrant and Guest');
-        testQuestions[0].Lookup_Object__c = '';
         update testQuestions;
 
         System.runAs(testUser) {
@@ -242,14 +238,10 @@ private class SummitEventsAdditionalQuestions_TEST {
             SummitEventsShared SEShared = new SummitEventsShared();
             Datetime nowTime = Datetime.now();
             SEShared.createEncryptedCookieWithNow('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, nowTime);
-
-            SummitEventsAdditionalQuestionsCtlr questionController = new SummitEventsAdditionalQuestionsCtlr();
-            System.assertEquals(questionController.questionWrapper[0].setupError.trim(), 'Question setup issue(s): Look up field:  may not exist or is inaccessible. Look up field:  may not exist or is inaccessible.');
-
             testQuestions[0].Lookup_Object__c = 'Blah';
             testQuestions[0].Lookup_Fields__c = 'Blah';
             update testQuestions;
-            questionController = new SummitEventsAdditionalQuestionsCtlr();
+            SummitEventsAdditionalQuestionsCtlr questionController = new SummitEventsAdditionalQuestionsCtlr();
             System.assertEquals(questionController.questionWrapper[0].setupError.trim(), 'Question setup issue(s): Lookup Object: blah may not exist or is inaccessible. Look up field: blah may not exist or is inaccessible.');
 
             Test.stopTest();
@@ -270,10 +262,10 @@ private class SummitEventsAdditionalQuestions_TEST {
         if (String.isNotBlank(namespace)) {
             namespace = namespace + '__';
         }
-
+        testQuestions[0].Picklist_Values__c = '';
+        testQuestions[0].Question_Field_Type__c = 'Picklist';
         testQuestions[0].Existing_Picklist_Values__c = 'Registrant_State_Global__c';
         testQuestions[0].Map_to_Field__c = namespace + 'Registrant_State_Global__c';
-        testQuestions[0].Picklist_Values__c = 'MN';
         update testQuestions;
 
         System.runAs(testUser) {
